test/expected/cli/regex_error_caret.out
shit: 1:11: error: Unable to evaluate the [[ ]].
     1 |  [[ abc =~ ( ]]
       |            ^~ here.
note: The regular expression '(' is invalid.
